testing/RESTFullApiSample/Product API/api/errors/not-found/{id}/Demonstrates a 404 Not Found error.bru
meta {
  name: Demonstrates a 404 Not Found error
  type: http
  seq: 1
}

get {
  url: {{baseUrl}}/api/errors/not-found/:id
  body: none
  auth: inherit
}

params:path {
  id: 
}
